refactor: switch preview not any more supported